testsuite/poke.pkl/apush-diag-3.pk
/* { dg-do compile } */

var a =
  apush ([[""],[""],[""]],
         [1]); /* { dg-error "invalid operand.*\n.*expected string" } */
